# KeroshiZeroTetris

./: .gitignore  CMakeLists.txt  combo.h  converter.h  def.h  kick.h  mcts.h  mino.h  model.py  model_loader.h  tetris.h
api/: control.cpp  io_seq.js  tetrio_f.cpp  tetrio_f.js  tetrio_f_input.txt  tetrio_f_socket.txt
archive/3/: main.md
archive/6/: main.md  trainer.cpp
archive/test0/1/: main.md
archive/test0/2/: main.md
archive/test0/4/: main.md
archive/test0/5/: main.md
archive/test0/6/: main.md
archive/test0/7/: trainer.cpp
archive/test1/: 2-1.out
archive/test1/1/: 1.md  trainer.cpp
archive/test1/2/: 2.md  trainer.cpp
archive/test1/3/: trainer.cpp
include/: buffer.h  combo.h  control.h  converter.h  def.h  kick.h  mcts.h  message.h  mino.h  model_loader.h  predict.h  record.h  render.h  tetris.h  timer.h  train.h
include/core/: def.hpp  mino.hpp
model/: default.pt  model.py
plot/: multi.py  single.py
src/: buffer.cpp  combo.cpp  control.cpp  converter.cpp  demo.cpp  demo_p.cpp  model_loader.cpp  predict.cpp  render.cpp  train.cpp  trainer.cpp
test/: test_buffer.cpp  test_libtorch.cpp  test_mcts_tetris.cpp  test_mino.cpp  test_model_input.cpp  test_read_buffer.cpp  test_spin_check.cpp  test_tetris_legal.cpp  test_tetris_random.cpp  test_tetris_seed.cpp
test/model/attack/: gen.cpp  loss.cpp  plot.py
tests/: CMakeLists.txt  hello.cpp
tex/: main.tex  references.bib
web/: 1-2.out  1.out  2-2.out  3-1.out  mctsp_render.html  package-lock.json  package.json  test_markdown.html  vite.config.js
web/src/: keroshi.js  main.js
web/src/tetris/: decoder.js  render.js
